# Minishell

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.42_style  README.md  history_continue.c  minimake.sh
.github/workflows/: catch-unitests.yml  compilation-check.yml  linux.yml  macos.yml  systemtests.yml  unittests.yml
apps/: CMakeLists.txt  builtin_echo.c  env.c  minishell.c  prompt.c  torture-bash_pattern.c  torture-bash_sym.c  torture-debugger.c  torture-executor.c  torture-lexer.c  torture-parser.c
cmake/: add_subdirectories.cmake  subdirlist.cmake
inc/: journal.h  lexer.h  minishell.h  prompt.h  token.h
includes/: argv.h  bach_ops.h  bash_ops.h  bash_pattern.h  bash_sym.h  command.h  cursor.h  debugger.h  directory.h  env.h  env_access.h  env_node.h  env_singleton.h  environ.h  execscheme.h  executor.h  file.h  filesystem.h  filesystem_traversal.h  ft_unistd.h  history.h  journal.h  key_listener.h  lexer.h  minishell.h  parser.h  path.h  pid.h  pipe.h  process.h  prompt.h  prompt_singleton.h  range.h  redirection.h  shell.h  shellcore.h  string_processing.h  termcap.h  token.h
src/: CMakeLists.txt  argv.c  argv_debugging.c  argv_lifetime.c  argv_transform.c  argv_utility.c  bash_pattern.c  bash_pattern_dump_type.c  bash_pattern_match_token_to_type.c  bash_sym.c  builtin_cd.c  builtin_cd_bool.c  builtin_cd_utils.c  builtin_echo.c  builtin_env.c  builtin_exit.c  builtin_export.c  builtin_pwd.c  builtin_set.c  builtin_unset.c  command.c  cursor.c  cursor_continue.c  debugger.c  debugger_continue.c  debugger_utility.c  directory.c  env.c  env_access.c  env_access_continue.c  env_continue.c  env_continue_2.c  env_environ_bootstrapping.c  env_lifetime.c  env_node.c  env_node_continue.c  env_singleton.c  env_singleton_continue.c  env_singleton_lifetime.c  env_utility.c  (+107 more)
tests/: CMakeLists.txt  bash_test.sh  bash_test_continuous.sh  stresstest.sh
tests/src/: argv.cpp  bash_pattern.cpp  bash_sym.cpp  command.cpp  directory.cpp  env.cpp  env_singleton.cpp  environ.cpp  filesystem_traversal.cpp  journal.cpp  lexer.cpp  main.cpp  parser.cpp  path.cpp  prompt.cpp  shell.cpp  test.cpp.template  token.cpp
